# OARFS

./: .gitignore  CMakeLists.txt  README.md  asynctask.cc  common.cc  common.h  compile_flags.txt  connection.cc  connection.h  crfs.h  delaytask.cc  delaytask.h  drfs.cc  drfs.h  filecache.h  filesystem.cc  filesystem.h  ftp-type.h  ftpclient.cc  ftpclient.h  ftpserver.cc  ftpserver.h  fuse-system.cc  fuse-system.h  lab.cc  metacache.cc  metacache.h  mfs.cc  mfs.h  mfsconfig  recordReceiver.py  recorder.cc  recorder.h  rfs.cc  rfs.h  test-cfs.cc
Mirror/: arch.txt  client.py  fileObject.py  mirrorcalc.py  mirrorserver.c  path.py  proposeReceiver.py  proposeSender.py  recordReceiver.py  recordSender.py  sample.py  schedulModel.py  server.py
Oarfts/: .zedstate  Makefile  connection.c  fileoperation.c  fileoperation.h  jsonparser.c  oarfts.h  server.c  transfer.c
Remotefs/: Makefile  RemoteFS  cache.c  cache.h  conn.c  conn.h  mirror.c  mirror.h  mirrorserver.c  record.c  record.h  remotefs.c  remotefs.h
Remotefs/test/: test-conn.c  test-mirror.c
shared/: Makefile  attr.c  attr.h  config.c  config.h  list.c
